fix: get video source & dark mode

--- a/packages/renderer/src/components/PageContainer/index.scss
+++ b/packages/renderer/src/components/PageContainer/index.scss
@@ -10,11 +10,24 @@
     align-items: center;
     justify-content: space-between;
     height: 60px;
+    border-bottom: #f0f0f0 solid 1px;
+    background: #fff;
   }
-
+  @media (prefers-color-scheme: dark) {
+    .page-container-header {
+      background: #141414;
+      border-bottom: #313131 solid 1px;
+    }
+  }
   .page-container-inner {
     overflow: auto;
     flex: 1;
     padding: 15px;
+    background: #fff;
+  }
+  @media (prefers-color-scheme: dark) {
+    .page-container-inner {
+      background: #141414;
+    }
   }
 }
